[package]
name = "quick_xml_parse_error"
version = "0.0.1"
authors = ["Chris Whealy <chris@lighthouse.no>"]
edition = "2021"
description = "Illustration of parse error when using quick_xml versions ≥ 0.27"
keywords = ["odata", "sap", "parser", "opendata"]
repository = "https://github.com/lighthouse-no/quick-xml-parse-error"
license = "MIT"

[dependencies]
# Versions of quick-xml from 0.27.0 upwards break with error Custom("missing field `Name`")
quick-xml = { version = "0.26", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
